--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ encoding_rs = "0.8"
 memmap2 = "0.9"                                      # Optional, for faster file reading
 clap = { version = "4.5.53", features = ["derive"] }
 hex = "0.4"
+byteorder = "1.5"
+csv = "1.3"
+serde = { version = "1.0", features = ["derive"] }
